# bfgs-solver-gpu

./: .gitignore  CMakeLists.txt  README.md  array2.h  bfgs-cpp.cpp  bfgs-cu.cu  evaluate.cu  format.sh  notes.txt  ops.cuh  ops.h  utils.cuh
data/: bfgs-large-eqs.txt  bfgs-large.txt  bfgs-mid-eqs.txt  bfgs-mid.txt
